Update 's2h8mnhpk-java-springboot' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.xjiang0905a.o6xe.p3.openshiftapps.com/rhtap/rhtap-qe:4dcfef921062373480a6ce85ac34fc7353019195@sha256:14c7b893a296e4255fb41242a2bfd16ca389e5b04ca693b88eeb2ff46049b8aa

--- a/components/s2h8mnhpk-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/s2h8mnhpk-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: s2h8mnhpk-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.xjiang0905a.o6xe.p3.openshiftapps.com/rhtap/rhtap-qe:4dcfef921062373480a6ce85ac34fc7353019195@sha256:14c7b893a296e4255fb41242a2bfd16ca389e5b04ca693b88eeb2ff46049b8aa
+          name: container-image
